	  PHY interrupts (2013-9-15).
	* arch/arm/src/kl/chip/kl_pit.h and kp_tpm.h:  Add register
	  definitions for the Freescale Kinetis KL25Z from Alan
	  Carvalho de Assis (2013-9-15).
	* configs/ and a few Ethernet drivers:  Add the prefix ETH0
	  to all PHY configuration selections.  This will allow us
	  to support to Ethernet MAC drivers with two different
	  PHYS (identified with ETH0 and ETH1) (2013-9-17).
	* net/Kconfig and drivers/net/Kconfig:  Move PHY selections from
	  net/Kconfig to drivers/net/Kconfig where they belong.  Add the previx
	  ETH0_ to each PHY selection.  And a new configuration
	  CONFIG_NETDEV_MULTINIC that can be set to enable support for multiple
	  Ethernet MAC drivers (not fully implemented yet).  When Enabled,
	  another set of PHY selections are enabled for ETH1_ (2013-9-17).
	* include/nuttx/net/mii.h:  Add definitions for the Micrel KSZ8051 PHY
	  (2013-9-17).
	* configs/zkit-arm-1768:  MMC/SD is on SPI, not SSP0.  From Rashid
	  Fatah (2013-9-17).
	* configs/: Lots of defconfig files changes.  A consequence of the
	  above renaming and moving of the PHY configuration settings is
	  that the you now also have to set CONFIG_NETDEVICES=y if you
	  need to set a PHY configuration (2013-9-17).
	* arch/arm/src/lpc17xx/lpc17_spi.c:  Remove undefined spi_select()
	  prototype.  This was cause compile time warnings (2013-9-17).
	* configs/sama5d3x-ek/src/sam_ostest.c:  Add OS test support for
	  the FPU test (2013-9-18).
	* arch/arm/src/sama5/sam_usbhost.h and include/nuttx/usb/usbhost_trace.h
	  Correct some inconsistencies in the way that USB configuration
	  settings are used.  This caused compilation errors in SAMA5 OHCI
	  when USB debug was ON but USB host tracing was off (2013-9-19).
	* nuttx/arch/arm/src/sama5/sam_clockconfig.c:  When 480MHz UPLL
	  is used to drive OHCI, it should have a divider of 10.  However,
	  that does not work.  A divider of 5 does.  Why? (2013-9-19).
