@@ -1173,7 +1173,7 @@ get [-b|-n] [-f &lt;local-path&gt;] -h &lt;ip-address&gt; &lt;remote-path&gt;
   <tr>
     <td><b><code>-b|-n</code></b></td>
     <td>
-      Selects either binary (&quot;octect&quot;) or test (&quot;netascii&quot;) transfer
+      Selects either binary (&quot;octet&quot;) or test (&quot;netascii&quot;) transfer
       mode.  Default: text.
     </td>
   </tr>
@@ -1885,7 +1885,7 @@ put [-b|-n] [-f &lt;remote-path&gt;] -h &lt;ip-address&gt; &lt;local-path&gt;
   <tr>
     <td><b><code>-b|-n</code></b></td>
     <td>
-      Selects either binary (&quot;octect&quot;) or test (&quot;netascii&quot;) transfer
+      Selects either binary (&quot;octet&quot;) or test (&quot;netascii&quot;) transfer
       mode.  Default: text.
     </td>
   </tr>
