@@ -154,7 +154,6 @@ CONFIG_SAMA5_DMAC1=y
 CONFIG_SAMA5_UHPHS=y
 CONFIG_SAMA5_UDPHS=y
 # CONFIG_SAMA5_GMAC is not set
-# CONFIG_SAMA5_EMAC is not set
 # CONFIG_SAMA5_LCDC is not set
 # CONFIG_SAMA5_ISI is not set
 # CONFIG_SAMA5_SSC0 is not set
@@ -174,6 +173,8 @@ CONFIG_SAMA5_PIO_IRQ=y
 # CONFIG_SAMA5_PIOC_IRQ is not set
 CONFIG_SAMA5_PIOD_IRQ=y
 # CONFIG_SAMA5_PIOE_IRQ is not set
+CONFIG_SAMA5_HAVE_GMAC=y
+# CONFIG_SAMA5_HAVE_EMAC is not set
 
 #
 # SPI device driver options
@@ -642,7 +643,6 @@ CONFIG_BUILTIN_PROXY_STACKSIZE=1024
 #
 # CONFIG_EXAMPLES_BUTTONS is not set
 # CONFIG_EXAMPLES_CAN is not set
-# CONFIG_EXAMPLES_CC3000BASIC is not set
 # CONFIG_EXAMPLES_COMPOSITE is not set
 # CONFIG_EXAMPLES_CXXTEST is not set
 # CONFIG_EXAMPLES_DHCPD is not set
