@@ -220,15 +220,15 @@
 /* USB Controller */
 
 #ifdef CONFIG_USBDEV_SELFPOWERED
-#  define SELFPOWERED USB_CONFIG_ATTR_SELFPOWER
+#  define CDCACM_SELFPOWERED USB_CONFIG_ATTR_SELFPOWER
 #else
-#  define SELFPOWERED (0)
+#  define CDCACM_SELFPOWERED (0)
 #endif
 
 #ifdef CONFIG_USBDEV_REMOTEWAKEUP
-#  define REMOTEWAKEUP USB_CONFIG_ATTR_WAKEUP
+#  define CDCACM_REMOTEWAKEUP USB_CONFIG_ATTR_WAKEUP
 #else
-#  define REMOTEWAKEUP (0)
+#  define CDCACM_REMOTEWAKEUP (0)
 #endif
 
 #ifndef CONFIG_USBDEV_MAXPOWER
